[package]
name = "category_theory_for_programmers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[test]]
name = "challenge1"
path = "challenge1.rs"

[[test]]
name = "challenge2"
path = "challenge2.rs"
